--- a/src/style.css
+++ b/src/style.css
@@ -19,3 +19,15 @@ main {
     background-color: rgb(0, 115, 255);
     color: white;
 }
+
+.card {
+    width: 20rem;
+    border-radius: 0.75rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    overflow: hidden;
+    box-shadow: 0 6px 22px -14px rgba(0, 0, 0, 0.79);
+    margin: 2rem 1rem;
+}
